Se agregan animaciones al menu del header

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav>
             <a href="index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
             <ul class="navbar">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./vistas/productos.html">Productos</a></li>
-                <li><a href="./vistas/soluciones.html">Soluciones</a></li>
-                <li><a href="./vistas/clientes.html">Clientes</a></li>
-                <li><a href="./vistas/contacto.html">Contacto</a></li>
+                <li class="bouncetop1"><a href="index.html">Inicio</a></li>
+                <li class="bouncetop2"><a href="./vistas/productos.html">Productos</a></li>
+                <li class="bouncetop3"><a href="./vistas/soluciones.html">Soluciones</a></li>
+                <li class="bouncetop4"><a href="./vistas/clientes.html">Clientes</a></li>
+                <li class="bouncetop5"><a href="./vistas/contacto.html">Contacto</a></li>
             </ul>
         </nav>  
     </header>
