--- a/vistas/clientes.html
+++ b/vistas/clientes.html
@@ -27,12 +27,12 @@
     <hr class="azul">
 
     <main>
-        <h1 class="h1__titulos">CLIENTES</h1>
+        <h1 class="h1__titulo">CLIENTES</h1>
         
         <div class="container__clientes">
             <div class="galeria__item">
                 <img src="../assets/cliente1.png" alt="" class="galeria__img">
-                <h2 class="galeria__titulo">cliente</h2>
+                <h2 class="galeria__titulo"></h2>
             </div>
             <div class="galeria__item">
                 <img src="../assets/cliente2.png" alt="" class="galeria__img">
