--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyVision</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/favicon.ico">
-</head>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SkyVision</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="shortcut icon" href="./assets/favicon.ico">
+    </head>
 
 <body>
 
     
     <header> 
-        <nav>
-            <a href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
-            <ul class="navbar">
-                <li class="bouncetop1"><a href="../index.html">Inicio</a></li>
-                <li class="bouncetop2"><a href="productos.html">Productos</a></li>
-                <li class="bouncetop3"><a href="soluciones.html">Soluciones</a></li>
-                <li class="bouncetop4"><a href="clientes.html">Clientes</a></li>
-                <li class="bouncetop5"><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>  
+        <nav class="navbar fixed-top navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="soluciones.html">Soluciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"  href="clientes.html">Clientes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
     </header>
     
     <hr class="azul">
@@ -87,6 +105,8 @@
             <a href="contacto.html"><img src="../assets/logoCorreo.png" alt="icono-correo" class="alto"></a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 
 </body>
