--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +13,33 @@
 <body class="body">
 
     <header> 
-        <nav>
-            <a href="index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
-            <ul class="navbar">
-                <li class="bouncetop1"><a href="index.html">Inicio</a></li>
-                <li class="bouncetop2"><a href="./vistas/productos.html">Productos</a></li>
-                <li class="bouncetop3"><a href="./vistas/soluciones.html">Soluciones</a></li>
-                <li class="bouncetop4"><a href="./vistas/clientes.html">Clientes</a></li>
-                <li class="bouncetop5"><a href="./vistas/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>  
+        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/soluciones.html">Soluciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/clientes.html">Clientes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
     </header>
  
    
@@ -36,22 +54,47 @@
             <h2 class="hero__subtitulo">Vehiculos aereos no tripulados (UAV)</h2>
         </section>
 
-
-        <section class="container__index">
-            <div class="img1">
-                <img class="imagenAncho100" src="./assets/Vista aerea campo.jpeg" alt="Campo desde el aire">
+        <div class="container__index">
+          <div id="carouselExampleCaptions" class="carousel slide" style="width: 70vw" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="textoEnGrid txt1">
-                <p class="text">Relevamiento y mapeo aereo de cosechas, inspeccion de lineas de alta tension, granjas solares.</p>  
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/Vista aerea campo.jpeg" class="imgCarouselIndex d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h2>AGRICULTURA</h2>
+                  <h4>Dotado de camaras multiespectrales y termicas se convierte en una herramienta muy eficaz para evaluar la productividad del suelo y analizar la salud de las plantaciones.</h4>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/Incendio-Dron-camara-termica-1024x640.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h2>INFRAESTRUCTURA E INDUSTRIA</h2>
+                  <h4>Permite misiones autonomas de control e inspección en sitios remotos, lineas de alta tension, tuberias, vias ferreas, carreteras, etc.</h4>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/Incendio-Dron-camara-termica-1024x640.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h2>BUSQUEDA Y VIGILANCIA</h2>
+                  <h4>Sus funciones inteligentes y su potente rendimiento permiten estrategias eficaces de busqueda, vigilancia y reconocimiento.</h4>
+                </div>
+              </div>
             </div>
-            <div class="textoEnGrid txt2">
-                <p class="text">Apoyo al combate de incendios, vigilancia, busqueda y rescate.</p>    
-            </div>
-            <div class="img2">
-                <img class="imagenAncho100" src="./assets/Incendio-Dron-camara-termica-1024x640.jpg" alt="Imagen termica incendio" ">
-            </div>
-        </section>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      
     </main>
 
     <hr>
@@ -63,6 +106,7 @@
             <a href="./vistas/contacto.html"><img src="./assets/logoCorreo.png" alt="icono-correo" class=""></a>
         </div>
     </footer> 
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
