--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
               <div class="carousel-item active">
                 <img src="./assets/Vista aerea campo.jpeg" class="imgCarouselIndex d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
-                  <h2>AGRICULTURA</h2>
-                  <h4>Dotado de camaras multiespectrales y termicas se convierte en una herramienta muy eficaz para evaluar la productividad del suelo y analizar la salud de las plantaciones.</h4>
+                  <h2 class="badge bg-dark text-wrap fw-normal fs-2">AGRICULTURA</h2>
+                  <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Dotado de camaras multiespectrales y termicas se convierte en una herramienta muy eficaz para evaluar la productividad del suelo y analizar la salud de las plantaciones.</h4>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/Incendio-Dron-camara-termica-1024x640.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <img src="./assets/linas electricas.jpg" class="imgCarouselIndex d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
-                  <h2>INFRAESTRUCTURA E INDUSTRIA</h2>
-                  <h4>Permite misiones autonomas de control e inspección en sitios remotos, lineas de alta tension, tuberias, vias ferreas, carreteras, etc.</h4>
+                  <h2 class="badge bg-dark text-wrap fw-normal fs-2"">INFRAESTRUCTURA E INDUSTRIA</h2>
+                  <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Permite misiones autonomas de control e inspeccion en sitios remotos, lineas de alta tension, tuberias, vias ferreas, carreteras, etc.</h4>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/Incendio-Dron-camara-termica-1024x640.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <img src="./assets/busqueda y rescate.jpg" class="imgCarouselIndex d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
-                  <h2>BUSQUEDA Y VIGILANCIA</h2>
-                  <h4>Sus funciones inteligentes y su potente rendimiento permiten estrategias eficaces de busqueda, vigilancia y reconocimiento.</h4>
+                  <h2 class="badge bg-dark text-wrap fw-normal fs-2"">BUSQUEDA Y VIGILANCIA</h2>
+                  <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Sus funciones inteligentes y su potente rendimiento permiten estrategias eficaces de busqueda, vigilancia y reconocimiento.</h4>
                 </div>
               </div>
             </div>
