--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -42,54 +42,61 @@
         </nav>
     </header>
   
-    <hr class="azul">
+
 
     <main>
 
-        <h1 class="h1__titulo">SOLUCIONES</h1>
-                 
-        <section class="container__solucion">
-            <div class="areaSolucion1">
-                <img class="imagenAncho100" src="../assets/soluciones_agricultura.png" alt="vistas UAV murcielago">
+        <div class="container-fluid">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-6">
+                    <img class="imgProducto" src="../assets/soluciones_agricultura.png" alt="vistas UAV murcielago">               
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-group badge fs-6">
+                        <li class="list-group-item fs-4 bg-primary text-wrap">SECTOR AGRICULTURA (CAMARA NIR)</li>
+                        <li class="list-group-item">- Deteccion de deficit hidrico</li>
+                        <li class="list-group-item">- Control de plagas</li>
+                        <li class="list-group-item">- Seguimiento de cosechas</li>
+                    </ul>
+                </div>
             </div>
-            <div class="textoEnGrid--claro areaSolucion2">
-                <ul class="lista__vertical">
-                    <li class="lista__vertical--elemento">SECTOR AGRICULTURA (CAMARA NIR)</li>
-                    <li class="lista__vertical--elemento">- Deteccion de deficit hidrico</li>
-                    <li class="lista__vertical--elemento">- Control de plagas</li>
-                    <li class="lista__vertical--elemento">- Seguimiento de cosechas</li>
-                </ul>
-            </div>
-        </section>
- 
-        <section class="container__solucion">
-            <div class="textoEnGrid--claro areaSolucion2">
-                <ul class="lista__vertical">
-                    <li class="lista__vertical--elemento">SECTOR ENERGIA (CAMARA TERMICA)</li>
-                    <li class="lista__vertical--elemento">- Falla paneles solares</li>
-                    <li class="lista__vertical--elemento">- Lineas electricas degradadas</li>
-                    <li class="lista__vertical--elemento">- Aislaciones termicas rotas</li>
-                </ul>
-            </div>
-            <div class="areaSolucion1">
-                <img class="imagenAncho100" src="../assets/panel fotovoltaico.jpg" alt="vistas UAV murcielago">
-            </div>
+        </div>
+          
+        <hr>
 
-        </section>
+        <div class="container-fluid">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-6">
+                    <ul class="list-group badge fs-6">
+                        <li class="list-group-item fs-4 bg-primary text-wrap">SECTOR ENERGIA (CAMARA TERMICA)</li>
+                        <li class="list-group-item">- Falla paneles solares</li>
+                        <li class="list-group-item">- Lineas electricas degradadas</li>
+                        <li class="list-group-item">- Aislaciones termicas rotas</li>
+                    </ul>               
+                </div>
+                <div class="col-md-6">
+                    <img class="imgProducto" src="../assets/panel fotovoltaico.jpg" alt="vistas UAV murcielago">
+                </div>
+            </div>
+        </div>
 
-        <section class="container__solucion">
-            <div class="areaSolucion1">
-                <img class="imagenAncho100" src="../assets/Camara-térmica-seguridad-768x242.jpg" alt="vistas UAV murcielago">
+        <hr>
+
+        <div class="container-fluid">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-6">
+                    <img class="imgProducto" src="../assets/Camara-térmica-seguridad-768x242.jpg" alt="vistas UAV murcielago">               
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-group badge fs-6">
+                        <li class="list-group-item fs-4 bg-primary text-wrap">SECTOR SEGURIDAD (CAMARA TERMICA)</li>
+                        <li class="list-group-item">- Vigilancia perimetral</li>
+                        <li class="list-group-item">- Deteccion incendios incipientes</li>
+                        <li class="list-group-item">- Busqueda y seguimiento</li>
+                    </ul>
+                </div>
             </div>
-            <div class="textoEnGrid--claro areaSolucion2">
-                <ul class="lista__vertical">
-                    <li class="lista__vertical--elemento">SECTOR SEGURIDAD (CAMARA TERMICA)</li>
-                    <li class="lista__vertical--elemento">- Vigilancia perimetral</li>
-                    <li class="lista__vertical--elemento">- Deteccion incendios incipientes</li>
-                    <li class="lista__vertical--elemento">- Busqueda y seguimiento</li>
-                </ul>
-            </div>
-        </section>
+        </div>
 
 
     </main>
