--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
