--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -13,7 +13,7 @@
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
 
 
         <div class="listaCaracteristicas">
-          <ul class="list-group badge fs-6" style="opacity: .8;">
+          <ul class="list-group badge fs-8" style="opacity: .8;">
             <li class="list-group-item fs-2 bg-primary text-wrap">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
             <li class="list-group-item">Misiones totalmente autonomas, incluso mas alla del rango de comunicacion</li>
             <li class="list-group-item">Comunicacion por radio hasta 50 km. Si esta disponible una red 4G/LTE puede permitir un alcance ilimitado.</li>
