--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -13,9 +13,9 @@
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-light bg-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="soluciones.html">Soluciones</a>
+                    <a class="nav-link" href="soluciones.html">Soluciones</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  href="clientes.html">Clientes</a>
+                    <a class="nav-link active" aria-current="page" href="clientes.html">Clientes</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -103,15 +103,15 @@
  
     <footer>
         <div>
-            <a href="https://www.linkedin.com"><img src="../assets/logoLinked.png" alt="Logo Linkedin" class="footer__logo"></a>
-            <a href="https://www.youtube.com/watch?v=D3BWpoJ6ijs&ab_channel=CNET"><img src="../assets/logoYoutube.png" alt="Logo Youtube"></a>
-            <a href="contacto.html"><img src="../assets/logoCorreo.png" alt="icono-correo" class="alto"></a>
+            <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+            <span class="mb-3 mb-md-0">&copy; 2022 SkyVision, Inc</span>
+        </div>
+        <div>
+            <a class="animacionFooter" href="https://www.linkedin.com"><img src="../assets/logoLinked.png" alt="Logo Linkedin" class="footer__logo"></a>
+            <a class="animacionFooter" href="https://www.youtube.com/watch?v=D3BWpoJ6ijs&ab_channel=CNET"><img src="../assets/logoYoutube.png" alt="Logo Youtube"></a>
+            <a class="animacionFooter" href="contacto.html"><img src="../assets/logoCorreo.png" alt="icono-correo" class="alto"></a>
         </div>
     </footer>
-
-    <script>
-        AOS.init();
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
