--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -47,7 +47,7 @@
     <main>
 
 
-
+        <!--LISTA CARACTERISTICAS DE AMBOS PRODUCTOS-->
         <div class="listaCaracteristicas">
           <ul class="list-group badge fs-8" style="opacity: .8;">
             <li class="list-group-item fs-2 bg-primary text-wrap">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
@@ -70,6 +70,7 @@
         <div class="container" style="padding: 15px;">
           <div class="row align-items-start">
             
+            <!--MODELO ALBATROS-->
             <div class="col-md-6">
               <div class="card">
                 <div class="card-body">
@@ -85,7 +86,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <div class="listaCaracteristicas--particulares">
+                        <div class="listaCaracteristicasParticulares">
                           <ul class="list-group">
                             <li class="list-group-item">Carga util de hasta 2kg</li>
                             <li class="list-group-item">Autonomia 200 km</li>
@@ -99,7 +100,7 @@
               </div>
             </div>
 
-
+            <!--MODELO BAT-->
             <div class="col-md-6">
               <div class="card">
                 <div class="card-body">
@@ -115,7 +116,7 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <div class="listaCaracteristicas--particulares">
+                        <div class="listaCaracteristicasParticulares">
                           <ul class="list-group">
                             <li class="list-group-item">Capacidad de despegue y aterrizaje vertical</li>
                             <li class="list-group-item">Carga util de hasta 1.2kg</li>
