--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -49,7 +49,7 @@
         <div class="container-fluid">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6">
-                    <img class="imgProducto" src="../assets/soluciones_agricultura.png" alt="vistas UAV murcielago">               
+                    <img class="imgSolucion" src="../assets/soluciones_agricultura.png" alt="vistas UAV murcielago">               
                 </div>
                 <div class="col-md-6">
                     <ul class="list-group badge fs-6">
@@ -75,7 +75,7 @@
                     </ul>               
                 </div>
                 <div class="col-md-6">
-                    <img class="imgProducto" src="../assets/panel fotovoltaico.jpg" alt="vistas UAV murcielago">
+                    <img class="imgSolucion" src="../assets/panel fotovoltaico.jpg" alt="vistas UAV murcielago">
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
         <div class="container-fluid">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6">
-                    <img class="imgProducto" src="../assets/Camara-térmica-seguridad-768x242.jpg" alt="vistas UAV murcielago">               
+                    <img class="imgSolucion" src="../assets/Camara-térmica-seguridad-768x242.jpg" alt="vistas UAV murcielago">               
                 </div>
                 <div class="col-md-6">
                     <ul class="list-group badge fs-6">
