--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="soluciones.html">Soluciones</a>
+                    <a class="nav-link active" aria-current="page" href="soluciones.html">Soluciones</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="clientes.html">Clientes</a>
+                    <a class="nav-link" href="clientes.html">Clientes</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
