--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 
     <footer>
       <div>
-          <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+          <a class="navbar-brand animacionFooter" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
           <span class="mb-3 mb-md-0">&copy; 2022 SkyVision, Inc</span>
       </div>
       <div>
-          <a class="animacionFooter" href="https://www.linkedin.com"><img src="../assets/logoLinked.png" alt="Logo Linkedin" class="footer__logo"></a>
-          <a class="animacionFooter" href="https://www.youtube.com/watch?v=D3BWpoJ6ijs&ab_channel=CNET"><img src="../assets/logoYoutube.png" alt="Logo Youtube"></a>
-          <a class="animacionFooter" href="contacto.html"><img src="../assets/logoCorreo.png" alt="icono-correo" class="alto"></a>
+          <a class="animacionFooter" href="https://www.linkedin.com"><img src="./assets/logoLinked.png" alt="Logo Linkedin" class="footer__logo"></a>
+          <a class="animacionFooter" href="https://www.youtube.com/watch?v=D3BWpoJ6ijs&ab_channel=CNET"><img src="./assets/logoYoutube.png" alt="Logo Youtube"></a>
+          <a class="animacionFooter" href="contacto.html"><img src="./assets/logoCorreo.png" alt="icono-correo" class="alto"></a>
       </div>
   </footer>
 
