--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body class="body">
 
-    <header> 
+    <header>
+        <!--NAVEGACION--> 
         <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
@@ -20,6 +21,8 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+                <!--LISTA DE OPCIONES-->
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -37,9 +40,11 @@
                     <a class="nav-link" href="./vistas/contacto.html">Contacto</a>
                   </li>
                 </ul>
+
               </div>
             </div>
-        </nav>
+          </nav>
+
     </header>
  
    
@@ -72,7 +77,7 @@
 
               <!--IMAGEN 1-->
               <div class="carousel-item active">
-                <img src="./assets/Vista aerea campo.jpeg" class="imgCarouselIndex d-block w-100" alt="...">
+                <img src="./assets/Vista aerea campo.jpeg" class="imgCarouselIndex d-block w-100" alt="vista aera campo">
                 <div class="carousel-caption  d-md-block">
                   <h2 class="badge bg-dark text-wrap fw-normal fs-2">AGRICULTURA</h2>
                   <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Dotado de camaras multiespectrales y termicas se convierte en una herramienta muy eficaz para evaluar la productividad del suelo y analizar la salud de las plantaciones.</h4>
@@ -81,7 +86,7 @@
 
               <!--IMAGEN 2-->
               <div class="carousel-item">
-                <img src="./assets/linas electricas.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <img src="./assets/linas electricas.jpg" class="imgCarouselIndex d-block w-100" alt="torre de alta tension">
                 <div class="carousel-caption  d-md-block">
                   <h2 class="badge bg-dark text-wrap fw-normal fs-2"">INFRAESTRUCTURA E INDUSTRIA</h2>
                   <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Permite misiones autonomas de control e inspeccion en sitios remotos, lineas de alta tension, tuberias, vias ferreas, carreteras, etc.</h4>
@@ -90,7 +95,7 @@
 
               <!--IMAGEN 3-->
               <div class="carousel-item">
-                <img src="./assets/busqueda y rescate.jpg" class="imgCarouselIndex d-block w-100" alt="...">
+                <img src="./assets/busqueda y rescate.jpg" class="imgCarouselIndex d-block w-100" alt="vision termica">
                 <div class="carousel-caption  d-md-block">
                   <h2 class="badge bg-dark text-wrap fw-normal fs-2"">BUSQUEDA Y VIGILANCIA</h2>
                   <h4 class="badge bg-dark text-wrap fw-normal fs-4" style="--bs-bg-opacity: .6">Sus funciones inteligentes y su potente rendimiento permiten estrategias eficaces de busqueda, vigilancia y reconocimiento.</h4>
