--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyVision</title>
+    <title>SkyVision | Smart UAV para su negocio </title>
+    <meta name="description" content="Servicio UAV para mejora de productividad plantaciones, vigilancia autonoma, combate incendios, busqueda y rescate">
+    <meta name="keywords" content="agricultura, vigilancia, rescate, drone, uav">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/favicon.ico">
 </head>
@@ -14,7 +16,7 @@
 
     <header>
         <!--NAVEGACION--> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,22 +58,21 @@
                 <video style="width:100%" src="./assets/videoHead.mp4" autoplay loop></video>        
             </div>
 
-            <h1 class="heroTitulo">INTELIGENCIA  AEREA</h1>
-            <h2 class="heroSubtitulo">Vehiculos aereos no tripulados (UAV)</h2>
+            <h1 class="hero__titulo">INTELIGENCIA  AEREA</h1>
+            <h2 class="hero__subtitulo">Vehiculos aereos no tripulados (UAV)</h2>
         </section>
 
 
       <!--MAIN SECTION-->
-      <!--CAROUSEL-->
 
+      <!--CAROUSEL-->
         <div class="containerIndex">
-          <div id="carouselExampleCaptions" class="carousel slide" style="width: 70vw" data-bs-ride="false">
+          <div id="carouselExampleCaptions" class="container carousel slide" style="width: 70vw" data-bs-ride="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-
             
             <div class="carousel-inner">
 
