--- a/vistas/clientes.html
+++ b/vistas/clientes.html
@@ -5,15 +5,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SkyVision</title>
+        <title>SkyVision | Clientes</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="shortcut icon" href="./assets/favicon.ico">
+        <link rel="shortcut icon" href="../assets/favicon.ico">
     </head>
 
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,34 +49,34 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-8 p-2 contenedorClientes">
-                    <img src="../assets/cliente1.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente1.png" alt="medihealth" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente2.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente2.png" alt="ancap" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente3.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente3.png" alt="montes del plata" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente4.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente4.png" alt="black angus" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente5.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente5.png" alt="granja" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente6.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente6.png" alt="saceem" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-8 p-2 contenedorClientes">
-                    <img src="../assets/cliente7.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente7.png" alt="megalabs" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente8.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente8.png" alt="ute" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente9.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente9.png" alt="vestas" class="contenedorClientes__galeriaImg">
                 </div>
                 <div class="col-sm-4 p-2 contenedorClientes">
-                    <img src="../assets/cliente10.png" alt="" class="galeria__img">
+                    <img src="../assets/cliente10.png" alt="granjita" class="contenedorClientes__galeriaImg">
                 </div>
             </div>
         </div>
