--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -5,15 +5,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SkyVision</title>
+        <title>SkyVision | Productos</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="shortcut icon" href="./assets/favicon.ico">
+        <link rel="shortcut icon" href="../assets/favicon.ico">
     </head>
 
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,8 +49,10 @@
 
         <!--LISTA CARACTERISTICAS DE AMBOS PRODUCTOS-->
         <div class="listaCaracteristicas">
-          <ul class="list-group badge fs-8" style="opacity: .8;">
-            <li class="list-group-item fs-2 bg-primary text-wrap">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
+          <div class="container">
+          <div class="">
+          <ul class="list-group badge fs-8 text-wrap" style="opacity: .8;">
+            <li class="list-group-item fs-2 bg-primary ">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
             <li class="list-group-item">Misiones totalmente autonomas, incluso mas alla del rango de comunicacion</li>
             <li class="list-group-item">Comunicacion por radio hasta 50 km. Si esta disponible una red 4G/LTE puede permitir un alcance ilimitado.</li>
             <li class="list-group-item">Rango de video HD de 50 KM (o ilimitado a traves de LTE/4G)</li>
@@ -63,6 +65,8 @@
             <li class="list-group-item">Despliegue rapido 10 minutos: los aviones tripulados requieren mas tiempo y planificacion logistica antes de que puedan estar en el aire y trabajar.</li>
             <li class="list-group-item">Sonido imperceptible a partir de 20mts de distancia (menor a 20dB)</li>
           </ul>
+          </div>
+          </div>
         </div>
 
 
