--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -5,20 +5,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SkyVision</title>
+        <title>SkyVision | Soluciones</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="shortcut icon" href="./assets/favicon.ico">
+        <link rel="shortcut icon" href="../assets/favicon.ico">
     </head>
 
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -57,7 +58,7 @@
 
             <div class="row">
                 <h2 class="text-start badge bg-dark text-wrap fw-lighter fs-3">
-                    Agricultura de presicion
+                    Agricultura de precision
                 </h2>
             </div>
             <div class="row align-items-center justify-content-center">
