Agrego HTML y SITEMAP para Google Search

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!--MAIN SECTION-->
 
       <!--CAROUSEL-->
-        <div class="containerIndex">
+        <div class="containter containerIndex">
           <div id="carouselExampleCaptions" class="carousel slide" style="width: 95vw" data-bs-ride="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -129,13 +129,12 @@
     <hr>
 
     <footer>
-      <!--Seccion 1: Contacto-->
+   
      
         <div class="container-fluid text-center pt-4">
           <div class="row justify-content-center align-items-center">
             <!--LOGO-->
             <div class="col-md-2 mx-auto mb-3">
-              <h5 class="mb-4">SkyVision</h5>
               <a class="navbar-brand animacionFooter" href="./index.html"><img src="./assets/Logo.png" alt="Logo" class="footer__logo"></a>
             </div>
 
