--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -89,7 +89,7 @@
                         <div class="row">
                             <textarea class="col-12" id="consulta" placeholder="Mensaje *" required></textarea>
                         </div>
-                        <div class="row" style="color: black;">CAMPOS REQUERIDOS *</div>
+                        <div class="row" style="color: black;">* CAMPOS REQUERIDOS</div>
                         
                         <!--BOTONES-->
                         <div class="row">
@@ -115,7 +115,6 @@
             <div class="row justify-content-center align-items-center">
               <!--LOGO-->
               <div class="col-md-2 mx-auto mb-3">
-                <h5 class="mb-4">SkyVision</h5>
                 <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="footer__logo"></a>
               </div>
   
