--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <!--TEXTO LATERAL-->
-                <div class="col-md-6">
+                <div class="col-md-6 textodescriptivo">
 
                     <p class="text-start badge bg-dark text-wrap fw-lighter fs-4">
                         Nuestros UAV son un gran activo para los agricultores porque les permite comprender mejor la salud y la vitalidad de sus cultivos. Al usar nuestra plataforma junto con una camara multiespectral o termica, hemos sido testigos de como nuestros clientes experimentan rendimientos mejorados y costos operativos reducidos.
@@ -88,7 +88,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="row" style="padding: 10px;">
+            <div class="row textodescriptivo" style="padding: 10px;">
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Identificar la ubicacion especifica de plagas y malezas para optimizar el uso de pesticidas y fumigaciones de cultivos a traves de la deteccion temprana.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Proporcionar datos sobre la fertilidad del suelo y refinar la fertilizacion mediante la deteccion de deficiencias de nutrientes.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Cuente las plantas y determine los problemas de poblacion y espaciamiento, asi como el rendimiento estimado del cultivo.</p>
@@ -108,7 +108,7 @@
                     Infraestructuras, servicios publicos, inspeccion de carreteras y vias ferreas
                 </h2>
             </div>
-            <div class="row align-items-center justify-content-center">
+            <div class="row align-items-center justify-content-center textodescriptivo">
               
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
@@ -126,7 +126,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="row" style="padding: 10px;">
+            <div class="row textodescriptivo" style="padding: 10px;">
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Controlar / Identificar daños en la via ferrea o carreteras.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Controlar / Monitorear la invasion de vegetacion.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Controlar / Evaluar los daños de los desastres naturales.</p>
@@ -147,7 +147,7 @@
                     Apoyo situaciones de emergencia
                 </h2>
             </div>
-            <div class="row align-items-center justify-content-center">
+            <div class="row align-items-center justify-content-center textodescriptivo">
 
                 <!--IMAGEN-->
                 <div class="col-md-6">
@@ -164,7 +164,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="row" style="padding: 10px;">
+            <div class="row textodescriptivo" style="padding: 10px;">
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Realizar busqueda de personas desaparecidas.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Proporcionar video HD en vivo de areas dificiles de alcanzar.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Controlar / realizar inteligencia para emergencias y desastres naturales.</p>
@@ -187,7 +187,7 @@
             <div class="row align-items-center justify-content-center">
               
                 <!--TEXTO LATERAL-->
-                <div class="col-md-6">
+                <div class="col-md-6 textodescriptivo">
 
                     <p class="text-start badge bg-dark text-wrap fw-lighter fs-4">
                         Nuestros UAV estan diseñados para organizaciones que necesitan un ojo en el cielo. Proporcionando video termico y HD RGB en vivo para reconocimiento aereo. Con un rango de video de hasta 50 KM o un rango ilimitado usando la red movil. Brindando apoyo para:
@@ -202,7 +202,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="row" style="padding: 10px;">
+            <div class="row textodescriptivo" style="padding: 10px;">
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Detectar y observar incendios forestales.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Mejorar la seguridad de los guardabosques con reconocimiento aereo en areas peligrosas.</p>
                 <p class="text-center badge bg-dark text-wrap fw-normal fs-5">- Vigilancia y monitoreo perimetral.</p>
@@ -220,7 +220,6 @@
             <div class="row justify-content-center align-items-center">
               <!--LOGO-->
               <div class="col-md-2 mx-auto mb-3">
-                <h5 class="mb-4">SkyVision</h5>
                 <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="footer__logo"></a>
               </div>
   
