Mejora calidad imagenes

--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -22,16 +22,13 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                  </li>
+                <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
                     <a class="nav-link active"  aria-current="page" href="productos.html">Productos</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-tooggle" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
-                    aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                    aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="soluciones.html#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#infraestructuras">Infraestructuras</a></li>
@@ -53,7 +50,7 @@
     
   
 
-    <main>
+    <main class="container-xxl">
       <h1 class="titulo__pagina">PRODUCTOS</h1>
 
         <!--LISTA CARACTERISTICAS DE AMBOS PRODUCTOS-->
@@ -174,7 +171,7 @@
             <!--CONTACTO-->
             <div class="col-md-4 mx-auto mb-3">
               <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-              <p><i class="bi bi-house-door-fill me-3"></i>Montevideo, 11300, Uruguay</p>
+              <p><i class="bi bi-house-door-fill me-3"></i>Marindia, 11300, Uruguay</p>
               <p><i class="bi bi-envelope-fill me-3"></i>contacto@skyvision.com</p>
               <p><i class="bi bi-telephone-fill me-3"></i>+ 598 99 876 543</p>
             </div>
