--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -23,16 +23,13 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                  </li>
+                <ul class="navbar-nav align-items-center ">
                   <li class="nav-item">
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-tooggle" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
-                    aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                    aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="soluciones.html#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#infraestructuras">Infraestructuras</a></li>
@@ -54,14 +51,11 @@
     
 
 
-    <main>
+    <main class="container-xxl">
         <h1 class="titulo__pagina">CONTACTO</h1>
 
         <div class="container-fluid fs-5 formulario">
-            <div class="row">
-                <div class="col-sm-4">
-                    <img src="../assets/Logo.png" alt="" class="logoContacto">
-                </div>
+            <div class="row justify-content-center">
                 <form class="col-sm-8" action="" method="get" enctype="text/plain" >
                     <div class="container-fluid">
 
@@ -121,7 +115,7 @@
               <!--CONTACTO-->
               <div class="col-md-4 mx-auto mb-3">
                 <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-                <p><i class="bi bi-house-door-fill me-3"></i>Montevideo, 11300, Uruguay</p>
+                <p><i class="bi bi-house-door-fill me-3"></i>Marindia, 11300, Uruguay</p>
                 <p><i class="bi bi-envelope-fill me-3"></i>contacto@skyvision.com</p>
                 <p><i class="bi bi-telephone-fill me-3"></i>+ 598 99 876 543</p>
               </div>
