1 Cambio fuentes y colores

--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -12,13 +12,13 @@
         <link rel="shortcut icon" href="../assets/favicon.ico">
     </head>
 
-<body>
-
+<body style="background-color: rgba(33,37,41,1);">
     
     <header>       
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+        <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <a class="navbar-brand animacionFooter" href="../index.html">SkyVision</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -51,7 +51,7 @@
     
 
 
-    <main class="container-xxl">
+    <main class="container-xxl" style="background-color: rgba(33,37,41,1);>
         <h1 class="titulo__pagina">CONTACTO</h1>
 
         <div class="container-fluid fs-5 formulario">
