--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -15,9 +15,10 @@
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+        <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <a class="navbar-brand animacionFooter" href="../index.html">SkyVision</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -60,32 +61,28 @@
         <div class="container-fluid">
             <hr>
             <div class="row">
-                <h2 class="subtitulo__pagina" style="margin-top: 0.5rem;">
-                    Agricultura de precision
+                <h2 class="subtitulo__seccion" style="margin-top: 0.5rem;">
+                    Agricultura de precisión
                 </h2>
             </div>
             <div class="row align-items-center justify-content-center">
 
                 <!--IMAGEN-->
-                <div class="col-md-6">
+                <div class="col-md-6" style="padding: 0;">
                     <img class="imgSolucion" src="../assets/soluciones_agricultura.png" alt="vistas capas campo">               
                 </div>
 
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
-
-                    <p class="textodescriptivo badge bg-dark text-wrap fw-lighter fs-4">
+                    <p class="textodescriptivo text-wrap fw-lighter fs-4">
                         Nuestros UAV son un gran activo para los agricultores porque les permite comprender mejor la salud y la vitalidad de sus cultivos. Al usar nuestra plataforma junto con una cámara multiespectral o térmica, hemos sido testigos de como nuestros clientes experimentan rendimientos mejorados y costos operativos reducidos.
-                    </p>
-                    <p class="textodescriptivo badge bg-dark text-wrap fw-normal fs-4">
-                        Las cámaras multiespectrales y térmicas son herramientas muy eficaces para evaluar la productividad del suelo y analizar la salud de las plantas. Ver la salud del suelo y los cultivos a simple vista es muy limitado. Por otro lado, la tecnología de sensores multiespectrales permite al agricultor ver más allá de lo que puede ver el ojo desnudo. Los datos de imágenes multiespectrales se pueden utilizar para:
-                    </p>                                
+                    </p>                               
                 </div>
 
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="card bg-secondary" style="margin: 10px;">
+            <div class="card" style="margin: 10px;">
                 <div class="card-body">
                     <div class="row textodescriptivo" style="padding: 10px;">
                         <p class="fs-6"><i class="bi bi-eye"></i> Identificar la ubicación específica de plagas y malezas para optimizar el uso de pesticidas y fumigaciones de cultivos a través de la detección temprana.</p>
@@ -114,7 +111,7 @@
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
 
-                    <p class="textodescriptivo badge bg-dark text-wrap fw-lighter fs-4">
+                    <p class="textodescriptivo text-wrap fw-lighter fs-4">
                         Nuestros UAV pueden inspeccionar hasta 200 km en un solo vuelo, y monitorear sitios remotos a una distancia de hasta 50 km (o ilimitado a través de LTE/4G), utilizando video térmico y RGB de alta resolución. Lo hace de forma totalmente autónoma y puede volar corredores predefinidos con seguimiento automático del terreno para realizar las siguientes tareas:
                     </p>                            
                 </div>
@@ -127,7 +124,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="card bg-secondary" style="margin: 10px;">
+            <div class="card" style="margin: 10px;">
                 <div class="card-body">
                     <div class="row textodescriptivo" style="padding: 10px;">
                         <p class="fs-6"><i class="bi bi-signpost-split"></i> Controlar / Identificar daños en la vía férrea o carreteras.</p>
@@ -144,7 +141,7 @@
         <hr>
 
         <!--SECTION APOYO EMERGENCIAS-->
-        <a name="emergencias">hr</a>
+        <a name="emergencias"></a>
         <div class="container-fluid">
 
             <div class="row">
@@ -161,7 +158,7 @@
 
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
-                    <p class="textodescriptivo badge bg-dark text-wrap fw-lighter fs-4">
+                    <p class="textodescriptivo text-wrap fw-lighter fs-4">
                         Antes, después y durante un desastre, el tiempo y la seguridad son esenciales. Es por esto que los equipos de respuesta que despliegan vehículos aéreos no tripulados tienen una ventaja decisiva sobre los que no lo hacen. La capacidad de obtener una visión general completa de la escena sin poner en peligro a los socorristas es fundamental porque no solo ahorra tiempo, sino que también puede salvar vidas. Nuestros UAV tienen la capacidad de:
                     </p>                               
                 </div>
@@ -169,7 +166,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="card bg-secondary" style="margin: 10px;">
+            <div class="card" style="margin: 10px;">
                 <div class="card-body">
                     <div class="row textodescriptivo" style="padding: 10px;">
                         <p class="fs-6"><i class="bi bi-eye"></i> Realizar busqueda de personas desaparecidas.</p>
@@ -198,7 +195,7 @@
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
 
-                    <p class="textodescriptivo badge bg-dark text-wrap fw-lighter fs-4">
+                    <p class="textodescriptivo text-wrap fw-lighter fs-4">
                         Nuestros UAV estan diseñados para organizaciones que necesitan un ojo en el cielo. Proporcionando video termico y HD RGB en vivo para reconocimiento aereo. Con un rango de video de hasta 50 KM o un rango ilimitado usando la red movil. Brindando apoyo para:
                     </p>                            
                 </div>
@@ -211,7 +208,7 @@
             </div>
 
             <!--TEXTO CENTRAL-->
-            <div class="card bg-secondary" style="margin: 10px;">
+            <div class="card" style="margin: 10px;">
                 <div class="card-body">
                     <div class="row textodescriptivo" style="padding: 10px;">
                         <p class="fs-6"><i class="bi bi-tree"></i> Detectar y observar incendios forestales.</p>
