--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -15,9 +15,10 @@
 <body>
 
     <header> 
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+        <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand animacionFooter" href="../index.html"><img src="../assets/Logo.png" alt="Logo" class="header__logo"></a>
+              <a class="navbar-brand animacionFooter" href="../index.html">SkyVision</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
